--- a/application-dev.yml
+++ b/application-dev.yml
@@ -5,9 +5,9 @@ spring:
     name: wd-admin-dev
    #datasource config
   datasource:
-      url: jdbc:mysql://localhost:3306/ssbdb?useUnicode=true&characterEncoding=utf-8
-      username: root
-      password: 123456
+      url: jdbc:mysql://192.168.21.129:3306/test?useUnicode=true&characterEncoding=utf-8
+      username: develop
+      password: MyNewPass4!
       type: com.alibaba.druid.pool.DruidDataSource
       driver-class-name: com.mysql.jdbc.Driver
       druid:
