--- a/application-dev.yml
+++ b/application-dev.yml
@@ -43,4 +43,4 @@ web:
 
 ## mybatis mapper loaction
 mybatis:
-  mapper-locations: classpath:mapper/mapper/*.xml
+  mapper-locations: classpath:mapper/*.xml
